--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
 </dependency>
 
 <dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>3.8.1</version>
+ </dependency> 
+
+<dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>1.7.5</version>
